--- a/RayTracerWithCuda/RayTracerWithCuda.vcxproj
+++ b/RayTracerWithCuda/RayTracerWithCuda.vcxproj
@@ -113,6 +113,8 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalOptions>
+ %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -204,6 +206,7 @@
     <ClInclude Include="RayTracer\Ray.h" />
     <ClInclude Include="RayTracer\Scene.h" />
     <ClInclude Include="RayTracer\SceneToken.h" />
+    <ClInclude Include="RayTracer\Tracer\RayTracing.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Tools\Dependency\ToolsDependency.h" />
@@ -262,6 +265,7 @@
     <ClCompile Include="RayTracer\Object\TriangleMesh.cpp" />
     <ClCompile Include="RayTracer\Ray.cpp" />
     <ClCompile Include="RayTracer\Scene.cpp" />
+    <ClCompile Include="RayTracer\Tracer\RayTracing.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
